add header, footer of hbs

--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -7,9 +7,9 @@
     </head>
     <body>
         <div class="main-content">
-            <h1>About</h1>
-            <p>This is a weather application that provides real-time weather information.</p>
-            <p>Created by Andrew Mead</p>
+            {{>header}}
+            <p>{{aboutText}}</p>
+            {{>footer}}
         </div>
     </body>
 </html>
