--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -5,7 +5,8 @@
         <title>My Web Page</title>
     </head>
     <body>
-        <h1>{{title}}</h1>
+        {{>header}}
         <p>{{name}}</p>
+        {{>footer}}
     </body>
 </html>
